<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_help_two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_page_two_temp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_28pt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_page_two_drying"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_28pt" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_page_two_heating"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_28pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="70dp"
        android:text="@string/tv_page_two_drop"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_28pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="45dp"
        android:text="@string/tv_page_two_switch"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_28pt" />

</FrameLayout>