<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/img_guide_four" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="110dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_smart_wake"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_34pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/tip_sleep_four"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_28pt" />
    </LinearLayout>

    <TextView
        android:id="@+id/guide_btn_open"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_button_comm"
        android:gravity="center"
        android:text="@string/guide_four_start"
        android:textColor="@color/colorWhite"
        android:textSize="26sp" />

</FrameLayout>