<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_sleep_location"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dimen_34pt" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/img_bed" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dialog_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_dialog_text"
                    android:gravity="center"
                    android:text="@string/tv_left"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_dimen_28pt" />

                <TextView
                    android:id="@+id/tv_dialog_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_dialog_text"
                    android:gravity="center"
                    android:text="@string/tv_right"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_dimen_28pt" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>