<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/activity_common_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/head_gap_body" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_search_device" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/not_find_device_1"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_18" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/not_find_device_2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_18" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/not_find_device_3"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_dimen_18" />

    <ImageView
        android:id="@+id/imgView_retry_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_retry_connect"
        android:contentDescription="@string/app_name" />
</LinearLayout>