<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBg"
        android:orientation="vertical">

        <include layout="@layout/activity_common_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/head_gap_body" />

        <com.mooring.mh.views.WheelPicker.widget.WheelTimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_repeat"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_dimen_28pt" />

                <com.mooring.mh.views.AlarmDaySelectView
                    android:id="@+id/asv_alarm_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_right_arrow" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/tv_smart_alarm"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_dimen_24pt" />

            <ToggleButton
                android:id="@+id/tglBtn_alarm_smart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:button="@drawable/bg_toggle_button"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="100dp"
            android:text="@string/clock_smart_tip"
            android:textColor="@color/colorWhite50"
            android:textSize="@dimen/text_dimen_24pt" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/text_button_comm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_confirm" />
</RelativeLayout>